--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "npm run clean:reports",
     "test:chrome": "cypress run --headless --browser chrome",
     "test:firefox": "cypress run --headless --browser firefox",
-    "generate:reprot": "cypress run --reporter mochawesome"
+    "generate:reports": "cypress run --reporter mochawesome"
   },
   "repository": {
     "type": "git",
